[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofjustpy-components"
maintainers = [
 { name="Kabira K", email= "kabira@monallabs.in"}
]
readme= "README.md"
dynamic = ["version", "description"]
license = { file="LICENSE" }
dependencies = [
        'ofjustpy',
                ]


[tool.hatch.version]
path = "src/ofjustpy_components/__init__.py"

[project.urls]
Home = "http://webworks.monallabs.in/ofjustpy-components"
Documentation = "https://monallabs-org.github.io/ofjustpy_components"
Source = "https://github.com/monallabs-org/ofjustpy_components"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/ofjustpy-components",  
]

